replaced pagination buttons and fixed snow overflow-x

--- a/css/snow.css
+++ b/css/snow.css
@@ -6,6 +6,8 @@
     width: 80%;
     top: 0;
     bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
     pointer-events: none;
 }
 .small-snow {
@@ -243,7 +245,7 @@
         transform: translateX(0px);
     }
     50% {
-        transform: translateX(60px);
+        transform: translateX(40px);
     }
     100% {
         transform: translateX(0px);
